using System.Collections;
using System.Collections.Generic;
using UnityEngine;

/// <summary>
/// ó‘ÔˆÙí‚Ìí—Ş
/// </summary>
public enum StatusEffect
{
    //€–Só‘Ô
    Dead = 0
}
